--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -17,6 +17,75 @@
 
 .homeWrapper {
     /* background-color: green; */
-    height: 100vh;
+    height: 100%;
     padding-top: 22px;
+    padding-bottom: 100px;
+}
+
+.chatContainer {
+    width: 100%;
+    height: 51px;
+    background-color: green;
+    /* position: fixed;
+    bottom: 0;
+    left: -40px; */
+}
+
+.titleChat {
+    height: 30px;
+    width: 164px;
+    color: #fff;
+    background-color: "#000";
+}
+
+.innerBg {
+    width: 164px;
+    height: 100%;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    font-weight: 500;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.chatWrapper {
+    background-color: #FFFFFF;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 92.3%;
+    height: 51px;
+    display: flex;
+    align-items: center;
+}
+
+.marqueeContainer {
+    display: flex;
+    flex-direction: column;
+    margin-right: 67px;
+}
+
+.marqueeContainer span:first-child {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.marqueeContainer span:last-child {
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.btnAction {
+    outline: none;
+    background-color: #fff;
+    border: 1px solid #DAE0E6;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.04);
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-weight: 600;
+    font-size: 14px;
+    margin-left: 20px;
 }
